# strategy-cpp

./: .gitignore  CMakeLists.txt  README.md
strategy/: checker.cpp  checker.h  errors.h  fstream.cpp  fstream.h  generator.cpp  generator.h  random.h  strategy.cpp  strategy.h  stream.cpp  stream.h
tests/: checker_tests.cpp  generator_tests.cpp  istream_tests.cpp  random_tests.cpp
tests/temp/: README.md
